--- a/index.html
+++ b/index.html
@@ -77,12 +77,41 @@
           <img src="./img/decoraambiente.jpg" alt=""width="400" height="350">
           <h2> decora tus espacios</h2>
         </div>
-
-
       </div>
 
     </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>  
- 
-</body>
+  <footer>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">zoom</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+          
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/productos.html">productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/ofertas.html">ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/comprar.html">comprar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/encontranos.html">encontranos</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+            Navbar text with an inline element
+          </span>
+        </div>
+      </div>
+    </nav>
+  </footer>
+ </body>
 </html>
