--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -64,17 +64,41 @@
   
 </main>
 
-    <footer id="footer_index">
-        <ul>
-            <li><a href="../index.html">inicio</a></li>
-            <li><a href="./productos.html">productos</a></li>
-            <li><a href="./ofertas.html">ofertas</a></li>
-            <li><a href="./comprar.html">como comprar</a></li>
-            <li><a href="./encontranos.html">encontranos</a></li>
+<footer>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">zoom</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">inicio</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/productos.html">productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/ofertas.html">ofertas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./comprar.html">comprar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/encontranos.html">encontranos</a>
+          </li>
         </ul>
-        <div> seguinos</div>
-        <a target="_blank" href="https://www.instagram.com/zoommontegrande/?hl=es">instragram</a>
-    </footer>
+        <span class="navbar-text">
+          seguinos <a href="https://www.instagram.com/zoommontegrande/?hl=es">instragram</a>
+        </span>
+      </div>
+    </div>
+  </nav>
+</footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>   
 </body>
 </html>
