--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -43,13 +43,13 @@
       <div class="row">
         <div class="container text-center">
           <div class="row">
-            <div class="col lg 4">
+            <div class="col-lg-4 col-12">
               <img src="../img/promo1.jpeg" width="400" height="500"alt="">
             </div>
-            <div class="col lg 4">
+            <div class="col-lg-4 col-12">
               <img src="../img/promo2.jpeg"width="400" height="500" alt="">
             </div>
-            <div class="col lg 4">
+            <div class="col-lg-4 col-12">
                <img src="../img/promo3.jpeg" width="400" height="500" alt="">
             </div>
           </div>
