--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque qui ad cupiditate, nulla, in consectetur vel suscipit animi consequatur veritatis molestiae facilis velit vitae alias rerum ullam beatae consequuntur nemo hic ab sint quia. Rerum qui molestias illo vero soluta eum id laborum ab dolores? Voluptatem eveniet distinctio illo aspernatur voluptatibus vel facere laboriosam, tempore porro culpa! Omnis quibusdam voluptatem, hic porro quis alias ab doloribus quod ipsa enim necessitatibus. Voluptate voluptatibus esse labore modi veniam error, quia sed recusandae. Laborum, veritatis qui? Eligendi maiores consectetur voluptate quos deleniti odit itaque. Delectus, neque doloremque voluptas tempore dolores excepturi odio aliquam.</p>
     <section class="container-fluid">
       <div class="row">
-        <div class="col lg 6">
+        <div class="col-12 col-lg-6">
           <img src="./img/cocinarescrear.jpg" alt=""width="400" height="350">
           <h2>personaliza tu cocina</h2>
         </div>
-        <div class="col lg 6" >
+        <div class="col-12 col-lg-6" >
           <img src="./img/decoraambiente.jpg" alt=""width="400" height="350">
           <h2> decora tus espacios</h2>
         </div>
