--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -43,19 +43,19 @@
       <div class="row">
         <div class="container text-center">
           <div class="row">
-            <div class="col lg 4 col-12">
-              <img src="../img/promo1.jpeg" width="400" height="500"alt="">
+            <div class="col-lg-4 col-sm-12">
+              <img src="../img/promo1.jpeg" width="400" height="500" alt="">
             </div>
-            <div class="col lg 4 col-12">
-              <img src="../img/promo2.jpeg"width="400" height="500" alt="">
+            <div class="col-lg-4 col-sm-12">
+              <img src="../img/promo2.jpeg" width="400" height="500" alt="">
             </div>
-            <div class="col lg 4 col-12">
-               <img src="../img/promo3.jpeg" width="400" height="500" alt="">
+            <div class="col-lg-4 col-sm-12">
+              <img src="../img/promo3.jpeg" width="400" height="500" alt="">
             </div>
           </div>
         </div>
-
       </div>
+    </section>
 
 
     </section>
@@ -63,25 +63,25 @@
     <div>
       <div class="container text-center">
         <div class="row">
-          <div class="col lg 4">
-            <img src="../img/canastogrande.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/canastogrande.jpg" width="300" height="300" alt="">
           </div>
-          <div class="col lg 4">
-            <img src="../img/canasto organizador.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/canasto organizador.jpg" width="300" height="300" alt="">
           </div>
-          <div class="col lg 4">
-            <img src="../img/cesto.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/cesto.jpg" width="300" height="300" alt="">
           </div>
         </div>
         <div class="row">
-          <div class="col lg 4">
-            <img src="../img/vasos.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/vasos.jpg" width="300" height="300" alt="">
           </div>
-          <div class="col lg 4">
-            <img src="../img/jarros.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/jarros.jpg" width="300" height="300" alt="">
           </div>
-          <div class="col lg 4">
-          <img src="../img/setmate.jpg"width="300" height="300" alt="">
+          <div class="col-lg-4 col-sm-6">
+            <img src="../img/setmate.jpg" width="300" height="300" alt="">
           </div>
         </div>
       </div>
