--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,35 +37,31 @@
           </nav>
       </header>
     <h1>animate</h1>
-      <section class="container-fluid">
-        <div class="row">
-          <div class="container text-center">
-          <div class="row align-items-start">
-          <div class="col lg 6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-          <div class="col lg 6">
+    <section class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6 col-sm-12">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga nobis magnam dignissimos quae earum perspiciatis sapiente eos nulla error cupiditate voluptate necessitatibus iure est maiores neque doloribus quisquam deleniti.
           </p>
         </div>
-        </section>
-        <section class="container-fluid">
-          <div class="row">
-        <div class="container text-center">
-          <div class="row align-items-start">
-            <div class="col lg 6 ">
-             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel debitis! Excepturi adipisci ipsam quibusdam cumque id fugiat, animi corporis dignissimos neque aut nobis quasi repellat laborum at rerum. Sit quidem vel, atque itaque, a recusandae cum dolor placeat voluptatum, nam odio dolorum. Earum veritatis nobis aperiam facilis quae rerum in. Corporis repellendus doloremque qui fugiat perspiciatis incidunt blanditiis a tempore? Pariatur aliquam voluptate sequi laudantium sunt quisquam voluptatum, autem, officia quaerat ea excepturi ipsum recusandae ipsam nulla ab consequuntur suscipit tempore consequatur necessitatibus praesentium eveniet odio. Quibusdam voluptas ipsum vel molestias quidem voluptate obcaecati reprehenderit porro? Necessitatibus, fugit illum.
-             </p>
-            </div>
-            <div class="col lg 6">
-             <img src="../img/vallijanue.jpg" alt="" width="400" height="500" >
-            </div>
-          </div>
-          </div>
-          </div>
-          </section>
+      </div>
+    </section>
+    
+    <section class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel debitis! Excepturi adipisci ipsam quibusdam cumque id fugiat, animi corporis dignissimos neque aut nobis quasi repellat laborum at rerum. Sit quidem vel, atque itaque, a recusandae cum dolor placeat voluptatum, nam odio dolorum. Earum veritatis nobis aperiam facilis quae rerum in. Corporis repellendus doloremque qui fugiat perspiciatis incidunt blanditiis a tempore? Pariatur aliquam voluptate sequi laudantium sunt quisquam voluptatum, autem, officia quaerat ea excepturi ipsum recusandae ipsam nulla ab consequuntur suscipit tempore consequatur necessitatibus praesentium eveniet odio. Quibusdam voluptas ipsum vel molestias quidem voluptate obcaecati reprehenderit porro? Necessitatibus, fugit illum.
+          </p>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <img src="../img/vallijanue.jpg" alt="" class="img-fluid">
+        </div>
+      </div>
+    </section>
 
           <section class="container-fluid">
             <div class="row">
