barra de navegacion abajo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            Navbar text with an inline element
+            seguinos <a href="https://www.instagram.com/zoommontegrande/?hl=es">instragram</a>
           </span>
         </div>
       </div>
