--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -43,7 +43,7 @@
             <div class="container text-center">
               <div class="row align-items-center">
                 <div class="col">
-                  <ul >
+                  <ul id="sindecoracion">
                     <li>lunes de 09 a 20 hs</li>
                     <li>martes de 09 a 20 hs</li>
                     <li>miercoles de 09 a 20 hs</li>
