--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bazar zoom</title>
-    <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hind&family=Roboto&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>bazar zoom/decora tu espacio</title>
+  <meta name="descripcion" content="decoramos tu cocina y tus espacios espacio favoritos con los gustos mas modernos y amplios">
+  <meta name="keywords" content="cacerolas, cocina ,hudson , tramontina,renovacion,vajilla,espacios,ambientes">
+  <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hind&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body> 
-    <header class="container-fluid">
-      <nav class="row">
-        <ul class="nav justify-content-end">
-            <img src="./img/logo.jpg" alt="">
+<body>
+  <header class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./img/logo.jpg" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
             </li>
@@ -34,69 +44,71 @@
               <a class="nav-link" href="./pages/encontranos.html">encontranos</a>
             </li>
           </ul>
-        </nav>
-    </header>
-    <h1>bazar~decoracion</h1>
-    <main class="row" >
-     <div id="carouselExampleIndicators" class="carousel slide" >
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner " >
-          <div class="carousel-item active">
-            <img src="./img/carrusel1.jpg" class="d-block w-100" alt="..."width="600" height="600" >
-          </div>
-          <div class="carousel-item">
-            <img src="./img/carrusel2.jpg" class="d-block w-100" alt="..."width="600" height="600" >
-          </div>
-          <div class="carousel-item">
-            <img src="./img/carrusel3.jpg" class="d-block w-100" alt="..."width="600" height="600" >
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-        
       </div>
-    </main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque qui ad cupiditate, nulla, in consectetur vel suscipit animi consequatur veritatis molestiae facilis velit vitae alias rerum ullam beatae consequuntur nemo hic ab sint quia. Rerum qui molestias illo vero soluta eum id laborum ab dolores? Voluptatem eveniet distinctio illo aspernatur voluptatibus vel facere laboriosam, tempore porro culpa! Omnis quibusdam voluptatem, hic porro quis alias ab doloribus quod ipsa enim necessitatibus. Voluptate voluptatibus esse labore modi veniam error, quia sed recusandae. Laborum, veritatis qui? Eligendi maiores consectetur voluptate quos deleniti odit itaque. Delectus, neque doloremque voluptas tempore dolores excepturi odio aliquam.</p>
+    </nav>
+  </header>
+
+  <h1 class="text-center">bazar~decoración</h1>
+
+  <main class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/carrusel1.jpg" class="d-block w-100" alt="..." width="600" height="600">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/carrusel2.jpg" class="d-block w-100" alt="..." width="600" height="600">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/carrusel3.jpg" class="d-block w-100" alt="..." width="600" height="600">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+
+    <p class="mt-4 text-center">¡Bienvenido al fascinante mundo del bazar y la decoración de ambientes! En nuestra página web, te invitamos a sumergirte en un universo lleno de estilo, creatividad y originalidad, donde podrás encontrar todo lo que necesitas para transformar tus espacios en verdaderos refugios de belleza y armonía. Además, nuestro equipo estará encantado de asesorarte en cada paso del camino, brindándote ideas, consejos y sugerencias para que puedas crear ambientes que reflejen tu personalidad y se adapten a tus necesidades.</p>
+
     <section class="container-fluid">
       <div class="row">
         <div class="col-12 col-lg-6">
-          <img src="./img/cocinarescrear.jpg" alt=""width="400" height="350">
-          <h2>personaliza tu cocina</h2>
+          <img src="./img/cocinarescrear.jpg" alt="" width="400" height="350">
+          <h2 class="text-center mt-4">personaliza tu cocina</h2>
         </div>
-        <div class="col-12 col-lg-6" >
-          <img src="./img/decoraambiente.jpg" alt=""width="400" height="350">
-          <h2> decora tus espacios</h2>
+        <div class="col-12 col-lg-6">
+          <img src="./img/decoraambiente.jpg" alt="" width="400" height="350">
+          <h2 class="text-center mt-4">decora tus espacios</h2>
         </div>
       </div>
-
     </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>  
-  <footer>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+  </main>
+
+  <footer class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
         <a class="navbar-brand" href="#">zoom</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-          
-            </li>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="./pages/productos.html">productos</a>
             </li>
             <li class="nav-item">
+
               <a class="nav-link" href="./pages/ofertas.html">ofertas</a>
             </li>
             <li class="nav-item">
@@ -107,11 +119,14 @@
             </li>
           </ul>
           <span class="navbar-text">
-            seguinos <a href="https://www.instagram.com/zoommontegrande/?hl=es">instragram</a>
+            seguinos <a href="https://www.instagram.com/zoommontegrande/?hl=es">instagram</a>
           </span>
         </div>
       </div>
     </nav>
   </footer>
- </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
+
 </html>
