--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bazar zoom</title>
+    <title>bazar zoom / ofertas semanales</title>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">    
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hind&family=Roboto&display=swap" rel="stylesheet">
@@ -59,7 +59,14 @@
 
 
     </section>
-     <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem qui molestiae debitis, adipisci possimus ut blanditiis tempore praesentium deleniti sunt. Doloribus, enim sed. Eaque fugiat mollitia nam, cupiditate animi necessitatibus voluptatem quod voluptas molestiae dolorem reprehenderit et aliquid totam quia neque distinctio praesentium soluta commodi beatae veniam quis atque! Omnis!</p>
+     <p> no solo encontrarás una amplia selección de productos de alta calidad, sino también varias ofertas especiales que te permitirán disfrutar de precios irresistibles en tus compras.
+
+      Nos encanta consentir a nuestros clientes y ofrecerles oportunidades para que puedan obtener los productos que desean a precios más accesibles. Nuestras ofertas especiales abarcan diferentes categorías de productos.
+       Ya sea que estés buscando renovar tu vajilla, equipar tu cocina con un nuevo juego de cacerolas o agregar un toque especial a tus ambientes con piezas decorativas, nuestras ofertas te brindarán la oportunidad perfecta para hacerlo sin comprometer tu presupuesto.
+      
+      En nuestra página web, podrás descubrir los descuentos y promociones disponibles en tiempo real. Te invitamos a visitar regularmente esta sección para no perderte ninguna oportunidad de adquirir productos de calidad a precios reducidos.
+      
+      Así que, si estás buscando aprovechar ofertas especiales y obtener productos de alta calidad a precios más bajos, ¡No dejes pasar esta oportunidad y disfruta de nuestras increíbles ofertas!</p>
     <div>
       <div class="container text-center">
         <div class="row">
