--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bazar zoom</title>
+    <title>bazar zoom / productos</title>
+    <meta name="descripcion" content="decoramos tu cocina y tus espacios espacio favoritos con los g ustos mas modernos">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,9 +43,13 @@
         <div class="col-lg-6 col-sm-12">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-sm-12 titulo1">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga nobis magnam dignissimos quae earum perspiciatis sapiente eos nulla error cupiditate voluptate necessitatibus iure est maiores neque doloribus quisquam deleniti.
+            encontrarás todo lo necesario para equipar tu cocina con juego de cacerolas de primera categoría.
+            Imagina poder cocinar con utensilios de alta calidad que te brinden un rendimiento excepcional y una experiencia culinaria incomparable. En nuestro bazar, nos enorgullece ofrecerte una amplia selección de juegos de cacerolas de renombradas marcas, cuidadosamente seleccionadas para satisfacer las necesidades de los amantes de la cocina más exigentes.
+            Desde juegos de acero inoxidable hasta cacerolas antiadherentes de última generación, nuestro catálogo abarca una variedad de opciones diseñadas para optimizar tus habilidades culinarias y brindarte resultados extraordinarios. Cada juego de cacerolas está compuesto por piezas funcionales y versátiles, que te permitirán preparar una amplia gama de recetas con facilidad y precisión.
+            En nuestra local , encontrarás una interfaz intuitiva que te permitirá explorar nuestras opciones de juego de cacerolas de manera sencilla, acceder a información detallada sobre cada producto. Además, nuestro equipo  estará encantado de brindarte asesoramiento personalizado, recomendaciones y consejos para ayudarte a seleccionar el juego de cacerolas que mejor se adapte a tus necesidades y estilo de cocina.
+            Sabemos que la calidad y el rendimiento son fundamentales en la cocina, por lo que nos esforzamos por ofrecerte productos duraderos y funcionales que te permitan disfrutar de una experiencia culinaria excepcional durante muchos años.
           </p>
         </div>
       </div>
@@ -53,8 +58,10 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-sm-12">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel debitis! Excepturi adipisci ipsam quibusdam cumque id fugiat, animi corporis dignissimos neque aut nobis quasi repellat laborum at rerum. Sit quidem vel, atque itaque, a recusandae cum dolor placeat voluptatum, nam odio dolorum. Earum veritatis nobis aperiam facilis quae rerum in. Corporis repellendus doloremque qui fugiat perspiciatis incidunt blanditiis a tempore? Pariatur aliquam voluptate sequi laudantium sunt quisquam voluptatum, autem, officia quaerat ea excepturi ipsum recusandae ipsam nulla ab consequuntur suscipit tempore consequatur necessitatibus praesentium eveniet odio. Quibusdam voluptas ipsum vel molestias quidem voluptate obcaecati reprehenderit porro? Necessitatibus, fugit illum.
+          <p class="titulo1">
+            Imagina poder deleitar a tus invitados con una vajilla única, que refleje tu estilo y resalte la belleza de tus creaciones culinarias. En nuestro bazar, nos enorgullece ofrecerte una amplia selección de vajillas de alta calidad, cuidadosamente seleccionadas para satisfacer los gustos más exigentes.
+            Desde delicados juegos de porcelana hasta modernos diseños de cerámica, nuestro catálogo abarca una variedad de estilos y patrones, adaptados a diferentes ocasiones y preferencias. Ya sea que busques un ambiente clásico y sofisticado, o una estética contemporánea y vanguardista, estamos seguros de que encontrarás la vajilla perfecta para crear mesas memorables. Pero no nos limitamos solo a platos y tazas. Nuestra selección incluye también cubiertos de calidad, cristalería elegante y accesorios decorativos que completarán la experiencia gastronómica. Queremos que cada detalle cuente y contribuya a la atmósfera especial que deseas crear en tus eventos y reuniones.
+            Así que, si estás listo para elevar tus experiencias gastronómicas y transformar tus mesas en obras de arte, te invitamos a adentrarte en nuestro bazar y descubrir la amplia variedad de vajilla que tenemos para ofrecerte. ¡Disfruta de la experiencia y elige la vajilla perfecta para ti!
           </p>
         </div>
         <div class="col-lg-6 col-sm-12">
@@ -72,7 +79,11 @@
                   </div>
                   <div class="col lg 6">
                    <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo voluptatibus debitis ducimus dolorem dolores ut voluptas enim, dicta ex facere quos commodi fugiat inventore voluptatum praesentium optio distinctio earum placeat!
+                    lleno de estilo, creatividad y originalidad, donde podrás encontrar todo lo que necesitas para transformar tus espacios en verdaderos refugios de belleza y armonía.
+
+                    Imagina un lugar donde cada objeto cuenta una historia, donde cada detalle está cuidadosamente seleccionado para agregar personalidad y encanto a tus ambientes. nos esforzamos por ofrecerte una amplia gama de productos únicos y exclusivos que despertarán tu imaginación y te inspirarán a crear espacios que reflejen tu propio estilo.
+                    Desde exquisitos muebles hasta delicadas piezas de decoración, nuestro catálogo abarca una gran variedad de estilos, desde lo clásico y elegante hasta lo moderno y vanguardista. Ya sea que estés buscando transformar tu sala de estar, darle vida a tu dormitorio o embellecer tu espacio al aire libre, estamos seguros de que encontrarás todo lo que necesitas para hacer realidad tus sueños de diseño.
+                  
                    </p> 
                   </div>
                 </div>
