cambios sin cambios

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </a>
     </div>
 
-    <p class="mt-4 text-center">¡Bienvenido al fascinante mundo del bazar y la decoración de ambientes! En nuestra página web, te invitamos a sumergirte en un universo lleno de estilo, creatividad y originalidad, donde podrás encontrar todo lo que necesitas para transformar tus espacios en verdaderos refugios de belleza y armonía. Además, nuestro equipo estará encantado de asesorarte en cada paso del camino, brindándote ideas, consejos y sugerencias para que puedas crear ambientes que reflejen tu personalidad y se adapten a tus necesidades.</p>
+    <p class="mt-4 text-center estilo-parrafo">¡Bienvenido al fascinante mundo del bazar y la decoración de ambientes! En nuestra página web, te invitamos a sumergirte en un universo lleno de estilo, creatividad y originalidad, donde podrás encontrar todo lo que necesitas para transformar tus espacios en verdaderos refugios de belleza y armonía. Además, nuestro equipo estará encantado de asesorarte en cada paso del camino, brindándote ideas, consejos y sugerencias para que puedas crear ambientes que reflejen tu personalidad y se adapten a tus necesidades.</p>
 
     <section class="container-fluid">
       <div class="row">
