--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,7 +44,7 @@
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6 col-sm-12 titulo1">
-          <p>
+          <p class="estilo-parrafo">
             encontrarás todo lo necesario para equipar tu cocina con juego de cacerolas de primera categoría.
             Imagina poder cocinar con utensilios de alta calidad que te brinden un rendimiento excepcional y una experiencia culinaria incomparable. En nuestro bazar, nos enorgullece ofrecerte una amplia selección de juegos de cacerolas de renombradas marcas, cuidadosamente seleccionadas para satisfacer las necesidades de los amantes de la cocina más exigentes.
             Desde juegos de acero inoxidable hasta cacerolas antiadherentes de última generación, nuestro catálogo abarca una variedad de opciones diseñadas para optimizar tus habilidades culinarias y brindarte resultados extraordinarios. Cada juego de cacerolas está compuesto por piezas funcionales y versátiles, que te permitirán preparar una amplia gama de recetas con facilidad y precisión.
@@ -58,7 +58,7 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-sm-12">
-          <p class="titulo1">
+          <p class="estilo-parrafo">
             Imagina poder deleitar a tus invitados con una vajilla única, que refleje tu estilo y resalte la belleza de tus creaciones culinarias. En nuestro bazar, nos enorgullece ofrecerte una amplia selección de vajillas de alta calidad, cuidadosamente seleccionadas para satisfacer los gustos más exigentes.
             Desde delicados juegos de porcelana hasta modernos diseños de cerámica, nuestro catálogo abarca una variedad de estilos y patrones, adaptados a diferentes ocasiones y preferencias. Ya sea que busques un ambiente clásico y sofisticado, o una estética contemporánea y vanguardista, estamos seguros de que encontrarás la vajilla perfecta para crear mesas memorables. Pero no nos limitamos solo a platos y tazas. Nuestra selección incluye también cubiertos de calidad, cristalería elegante y accesorios decorativos que completarán la experiencia gastronómica. Queremos que cada detalle cuente y contribuya a la atmósfera especial que deseas crear en tus eventos y reuniones.
             Así que, si estás listo para elevar tus experiencias gastronómicas y transformar tus mesas en obras de arte, te invitamos a adentrarte en nuestro bazar y descubrir la amplia variedad de vajilla que tenemos para ofrecerte. ¡Disfruta de la experiencia y elige la vajilla perfecta para ti!
@@ -77,8 +77,8 @@
                   <div class="col lg 6">
                     <img src="../img/decoracionnn.jpg" alt="" width="400" height="500">
                   </div>
-                  <div class="col lg 6">
-                   <p>
+                  <div class="col lg 6" >
+                   <p class="estilo-parrafo">
                     lleno de estilo, creatividad y originalidad, donde podrás encontrar todo lo que necesitas para transformar tus espacios en verdaderos refugios de belleza y armonía.
 
                     Imagina un lugar donde cada objeto cuenta una historia, donde cada detalle está cuidadosamente seleccionado para agregar personalidad y encanto a tus ambientes. nos esforzamos por ofrecerte una amplia gama de productos únicos y exclusivos que despertarán tu imaginación y te inspirarán a crear espacios que reflejen tu propio estilo.
