--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -44,7 +44,7 @@
    <div class="container text-center">
     <div class="row align-items-center">
       <div class="col lg 6">
-        <img src="../img/pago.jpeg" alt="">
+        <img src="../img/pago.jpeg" alt="formas de pago , posnet , lapos">
       </div>
       <div class="col lg 6">
         <ul>
