--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -17,7 +17,7 @@
     <header class="container-fluid">
         <nav class="row">
           <ul class="nav justify-content-end">
-              <img src="./img/logo.jpg" alt="">
+              <img src="./img/logo.jpg" alt="logo zoom">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
               </li>
@@ -44,13 +44,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-4 col-sm-12">
-              <img src="../img/promo1.jpeg" width="400" height="500" alt="">
+              <img src="../img/promo1.jpeg" width="400" height="500" alt=" descuentos ,tostador enlozado , parrilla para cocina">
             </div>
             <div class="col-lg-4 col-sm-12">
-              <img src="../img/promo2.jpeg" width="400" height="500" alt="">
+              <img src="../img/promo2.jpeg" width="400" height="500" alt="promocion en vasos y platos, durax ">
             </div>
             <div class="col-lg-4 col-sm-12">
-              <img src="../img/promo3.jpeg" width="400" height="500" alt="">
+              <img src="../img/promo3.jpeg" width="400" height="500" alt="oferta en tasas , pava de acero inoxidable, hudson">
             </div>
           </div>
         </div>
@@ -71,24 +71,24 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/canastogrande.jpg" width="300" height="300" alt="">
+            <img src="../img/canastogrande.jpg" width="300" height="300" alt="organizador de 30 lts linea tuffex">
           </div>
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/canasto organizador.jpg" width="300" height="300" alt="">
+            <img src="../img/canasto organizador.jpg" width="300" height="300" alt="organizador de 7 lts linea tuffex">
           </div>
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/cesto.jpg" width="300" height="300" alt="">
+            <img src="../img/cesto.jpg" width="300" height="300" alt="cesto linea tuffex">
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/vasos.jpg" width="300" height="300" alt="">
+            <img src="../img/vasos.jpg" width="300" height="300" alt="vasos win linea premiun">
           </div>
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/jarros.jpg" width="300" height="300" alt="">
+            <img src="../img/jarros.jpg" width="300" height="300" alt="jarros con diseños">
           </div>
           <div class="col-lg-4 col-sm-6">
-            <img src="../img/setmate.jpg" width="300" height="300" alt="">
+            <img src="../img/setmate.jpg" width="300" height="300" alt="set matero completo">
           </div>
         </div>
       </div>
