--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,7 +41,7 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-sm-12">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/2pt5UIAvqQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen> </iframe>
         </div>
         <div class="col-lg-6 col-sm-12 titulo1">
           <p class="estilo-parrafo">
@@ -65,7 +65,7 @@
           </p>
         </div>
         <div class="col-lg-6 col-sm-12">
-          <img src="../img/vallijanue.jpg" alt="" class="img-fluid">
+          <img src="../img/vallijanue.jpg" alt="vallijas super delicadas , ceramica , porcelana , acero , utensillos" class="img-fluid">
         </div>
       </div>
     </section>
@@ -75,7 +75,7 @@
               <div class="container text-center">
                 <div class="row align-items-start">
                   <div class="col lg 6">
-                    <img src="../img/decoracionnn.jpg" alt="" width="400" height="500">
+                    <img src="../img/decoracionnn.jpg" alt="decora tu lugar de confort, moderniza tus espacios , relojes , cuadros  " width="400" height="500">
                   </div>
                   <div class="col lg 6" >
                    <p class="estilo-parrafo">
