--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-12 col-lg-6">
-          <img src="./img/cocinarescrear.jpg" alt="" width="400" height="350">
+          <img src="./img/cocinarescrear.jpg" alt="juego de bateria , cacerolas , linea exclusive , 2023" width="400" height="350">
           <h2 class="text-center mt-4">personaliza tu cocina</h2>
         </div>
         <div class="col-12 col-lg-6">
-          <img src="./img/decoraambiente.jpg" alt="" width="400" height="350">
+          <img src="./img/decoraambiente.jpg" alt="ambiente, personaliza tu lugar,decoracion" width="400" height="350">
           <h2 class="text-center mt-4">decora tus espacios</h2>
         </div>
       </div>
