--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -37,37 +37,37 @@
 </head>
 <body>
     
-    <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <a class="navbar-brand" href="#">
-              <img src="../img/logo.jpg" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./productos.html">productos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./ofertas.html">ofertas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./comprar.html">comprar</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./encontranos.html">encontranos</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </header>
+  <header class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="../img/logo.jpg" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/productos.html">productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ofertas.html">ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/comprar.html">comprar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="encontranos.html">encontranos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
     <main>
         <h1 class="text-center">veni a visitarnos!</h1>
@@ -91,6 +91,25 @@
             </div>
           </div>
         </section>
+        <div>
+          <form action="documento.php" method="post">
+            <p>si te gustaria recibir nuestras ofertas por mail..</p>
+            <ul>
+              <li>
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="user_name" />
+              </li>
+              <li>
+                <label for="mail">Correo electrónico:</label>
+                <input type="email" id="mail" name="user_mail" />
+              </li>
+              <li>
+                <label for="msg">si ya nos conoces , que te parecio nuestra atencion</label>
+                <textarea id="msg" name="user_message"></textarea>
+              </li>
+            </ul>
+          </form>
+        </div>
     </main>
 
     <footer class="bg-light">
@@ -116,7 +135,7 @@
                 <a class="nav-link" href="./comprar.html">comprar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./encontranos.html">encontranos</a>
+                <a class="nav-link" href="encontranos.html">encontranos</a>
               </li>
             </ul>
             <span class="navbar-text">
