--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,28 +15,37 @@
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hind&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="container-fluid">
-        <nav class="row">
-          <ul class="nav justify-content-end">
-              <img src="./img/logo.jpg" alt="">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./productos.html">productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./ofertas.html">ofertas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./comprar.html">comprar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./encontranos.html">encontranos</a>
-              </li>
-            </ul>
-          </nav>
-      </header>
+  <header class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="../img/logo.jpg" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="productos.html">productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ofertas.html">ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/comprar.html">comprar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/encontranos.html">encontranos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
     <h1>animate</h1>
     <section class="container-fluid">
       <div class="row">
@@ -111,7 +120,7 @@
                     </li>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./productos.html">productos</a>
+                      <a class="nav-link" href="productos.html">productos</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="../pages/ofertas.html">ofertas</a>
